# stm32f4-ascii-graphics-demo

./: .clang-format  .clang-tidy  .gitignore  .project  CMakeLists.txt  README.md  mkdocs.yml  stm32f4-ascii-graphics-demo.ioc
.github/: labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: milestone-template.md
.github/workflows/: build-debug.yml  build.yml  deploy-docs.yml  doxygen-docs.yml  likec4-export.yml  pr-labeler.yml  release-creator.yml
App/: CMakeLists.txt
App/Inc/: dashboard.h  gfx_matrix_stream.h  rng_util.h  scene_manager.h  serial_hw.h  shell.h  shell_strings.h  terminal.h
App/Inc/Scenes/: scene_attributes_demo.h  scene_colour_demo.h  scene_credits.h  scene_glitch.h  scene_matrix_rain.h  scene_primitives_demo.h  scene_visual_demo.h  scene_xterm_palette.h
App/Src/: dashboard.c  gfx_matrix_stream.c  rng_util.c  scene_manager.c  serial_hw.c  shell.c  shell_strings.c  terminal.c
App/Src/Scenes/: scene_attributes_demo.c  scene_colour_demo.c  scene_credits.c  scene_glitch.c  scene_matrix_rain.c  scene_primitives_demo.c  scene_visual_demo.c  scene_xterm_palette.c
Core/Inc/: console.h  gfx_text.h  main.h  renderer.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  system.h
Core/Src/: console.c  gfx_text.c  main.c  renderer.c  system.c  usart.c
Docs/: Doxyfile  index.md
Docs/Assets/: extra.css
Docs/Explanation/: scenes-architecture.md  uart-bandwidth-strategies.md  uart-bandwidth.md
Docs/How-to/: add-a-scene.md  use-the-shell.md
Docs/LikeC4/: ascii-graphics-demo.c4  deployment.c4  likec4.config.json  specification.c4  views.c4
Docs/Reference/: index.md  shell-commands.md  terminal-color-attributes.md  terminal-colour-attributes.md  terminal-rendering.md  (+3 more)
STM32CubeIDE/: .project
(+8 files in other folders)
